# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  maarittely.md  pyproject.toml  tasks.py  viranhaltijapäätös_määräalan_myynti_pohja.docx
asiakirjapohjat/: Testipohja.docx  Testipohja2.docx  viranhaltijapäätös_määräalan_myynti_pohja.docx
data/: database.sqlite  database.sqlite-journal
dokumentaatio/: arkkitehtuuri.md  käyttöohje.md  maarittely.md  testausdokumentti.md  tuntikirjanpito.md
laskarit/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: database_connection.py  database_handler.py  databasehandler.py  document_handler.py  documenthandler.py  index.py  initialize_database.py  placeholder.py  program_service.py  replace_data.py
src/entities/: replace_data.py
src/repositories/: database_handler.py
src/services/: document_handler.py  program_service.py
src/tests/: conftest.py  document_handler_test.py  documenthandler_test.py  program_service_test.py
src/ui/: create_document_view.py  create_replace_data_view.py  delete_replace_data_view.py  main_view.py  settings_view.py  ui.py
